# runguard

./: .gitignore  README.md  pyproject.toml  readme.MD  readme.md
.github/workflows/: tests.yml
src/runguard/: __init__.py  __main__.py  cli.py  guard.py
test/src/runguard/: test___init__.py
tests/src/runguard/: test_cli.py  test_guard.py
